# flow-matching-marimo

./: README.md  flow_matching.py  flow_matching_slides.py  hello.py  pyproject.toml
lib/: alpha_beta.py  data.py  domain.py  models.py  ode.py  trajectory.py  vector_field.py
lib/celebA/: model_components.py  unet.py  vqvae.py
lib/mnist/: model.pth  model_small.pth  train_mnist_conditional.py  unet_conditional.py
lib/spiral_model/: data.py  model.pth  model.py  train.py
