[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "marimo>=0.14.16",
    "matplotlib>=3.10.5",
    "pyqt6>=6.9.1",
    "torch>=2.8.0",
]

[tool.pyright]
typeCheckingMode = "standard"
